update test_chat, test_voice and embedding for knowledge base and agent have to remember context from same threads/session

--- a/templates/core/dashboard.html
+++ b/templates/core/dashboard.html
@@ -101,6 +101,11 @@
                             </a>
                         </div>
                         <div class="col-md-3">
+                            <a href="{% url 'test_voice' %}" class="btn btn-outline-danger w-100">
+                                <i class="fas fa-microphone me-2"></i>Test Voice
+                            </a>
+                        </div>
+                        <div class="col-md-3">
                             <a href="{% url 'edit_qna' %}" class="btn btn-outline-info w-100">
                                 <i class="fas fa-edit me-2"></i>Edit Q&As
                             </a>
