--- a/templates/core/dashboard.html
+++ b/templates/core/dashboard.html
@@ -120,6 +120,11 @@
                                 <i class="fas fa-store me-2"></i>Change Business
                             </a>
                         </div>
+                        <div class="col-md-3">
+                            <a href="{% url 'widget_generator' %}" class="btn btn-outline-purple w-100">
+                                <i class="fas fa-code me-2"></i>Widget Generator
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
