--- a/templates/core/dashboard.html
+++ b/templates/core/dashboard.html
@@ -102,7 +102,12 @@
                         </div>
                         <div class="col-md-3">
                             <a href="{% url 'test_voice' %}" class="btn btn-outline-danger w-100">
-                                <i class="fas fa-microphone me-2"></i>Test Voice
+                                <i class="fas fa-microphone me-2"></i>Test Voice (Legacy)
+                            </a>
+                        </div>
+                        <div class="col-md-3">
+                            <a href="{% url 'test_realtime_voice' %}" class="btn btn-outline-warning w-100">
+                                <i class="fas fa-broadcast-tower me-2"></i>Realtime Voice
                             </a>
                         </div>
                         <div class="col-md-3">
