--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -400,6 +400,11 @@
                 {% endif %}
             </a>
             
+            <a class="nav-link {% if 'plan' in request.resolver_match.url_name or request.resolver_match.url_name == 'subscription_plans' %}active{% endif %}" href="{% url 'subscription_plans' %}">
+                <i class="fas fa-layer-group"></i>
+                <span>Subscription Plans</span>
+            </a>
+            
             <div class="sidebar-divider"></div>
             <div class="sidebar-heading">Analytics</div>
             
